gcc/testsuite/rust/rustc/ui/parser/impl-item-const-semantic-fail.rs
fn main() {}

struct X;

impl X {
    const Y: u8; // { dg-error "" "" { target *-*-* } }
}

